tests/negative/gold/clashing_method_test.gold
tests/negative/clashing_method_test.toit:9:3: error: Redefinition of 'foo'
  foo:
  ^~~
tests/negative/clashing_method_test.toit:6:3: note: First definition of 'foo'
  foo:
  ^~~
Compilation failed.
